src/objects/DMA_Zip__c.object
<CustomObject>
    <description>One row for each DMA and Zip combination</description>
    <fields>
        <fullName>City_Size__c</fullName>
        <label>City Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA_Rank__c</fullName>
        <label>DMA Rank</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <description>DMA this row is tied to</description>
        <label>DMA</label>
        <referenceTo>DMA__c</referenceTo>
        <relationshipLabel>DMA Zips</relationshipLabel>
        <relationshipName>DMA_Zips</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Metro_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Metro Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Demographic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID to the Zip code for this row</description>
        <label>Zip Demographic</label>
        <referenceTo>Zip_Demographic__c</referenceTo>
        <relationshipLabel>DMA Zips</relationshipLabel>
        <relationshipName>DMA_Zips</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DMA Zip</label>
    <nameField>
        <displayFormat>DZ-{0000}</displayFormat>
        <label>DMA Zips Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DMA Zips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>